netmanager/src/assets/css/chart-container.css
.chart-container-wrapper {
  display: flex;
  flex-wrap: wrap;
  width: 45%;
  min-width: 350px;
  height: 450px;
  background: #ffffff;
  margin: 20px;
  border: 1px solid #ffffff;
  border-radius: 4px;
  overflow-x: hidden;
}

.chart-title-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px;
  width: 100%;
  height: 50px;
  border-radius: inherit;
}

.title-green {
  background: #22b0c5;
  color: white;
}

.title-blue {
  background: #2f67e2;
  color: white;
}

.title-default {
  background: #f4edea;
  color: #6e8192;
}

.chart-title {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: capitalize;
}

.chart-control {
  display: inline-flex;
  align-items: center;
  color: inherit;
  cursor: pointer;
}

.chart-body {
  width: 100%;
  height: 80%;
  overflow-y: auto;
  position: relative;
  padding: 10px 20px 0 0;
}

.chart-flex-center-body {
  display: flex;
  align-items: center;
}

.chart-flex-center-body > * {
  width: 100%;
}

.chart-footer {
  color: #999;
  display: inline-flex;
  font-size: 12px;
  line-height: 22px;
  margin-left: 5px;
  width: 100%;
}
.chart-footer svg {
  top: 4px;
  width: 16px;
  height: 16px;
  position: relative;
  margin-right: 3px;
  margin-left: 3px;
}
.chart-footer .fab,
.chart-footer .fas,
.chart-footer .far,
.chart-footer .fal,
.chart-footer .material-icons {
  top: 4px;
  font-size: 16px;
  position: relative;
  margin-right: 3px;
  margin-left: 3px;
}

@media only screen and (max-width: 850px) {
  .chart-container-wrapper {
    width: 100%;
    margin: 20px 0;
  }
}

